# rencal

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  FLATPAK_FILE_ACCESS_PLAN.md  FLATPAK_PLAN.md  LICENSE  README.md  drizzle.config.ts  eslint.config.ts  index.html  justfile  lint-staged.config.mjs  package.json  pnpm-lock.yaml  popup.html  prettier.config.mjs  tsconfig.json  tsconfig.node.json  vite-plugin-rencal-themes.ts  vite.config.ts  vite.vortex.config.ts  vortex.html
.storybook/: main.ts  preview.ts  vitest.setup.ts
aur/: PKGBUILD-bin.template
docs/: calendar-systems-in-temporal.md  calendars-in-temporal.md  event-time-system.md  notifications.md  scroll-behaviour.md
eslint-rules/: must-use-result.ts  no-bare-promise.ts
flatpak/: org.ren.rencal.yml
scripts/: analyze-recording.ts  generate-icons.sh
src/: App.css  App.tsx  Settings.tsx  animations.css  cosmos.decorator.tsx  global.css  legacy.css  main.tsx  (+1 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: debug_reminders.rs
src-tauri/icons/: icon.icns
src-tauri/icons/macos/: icon.icns
src-tauri/notifierd/: Cargo.toml  rencal-notifierd-system.service  rencal-notifierd.service
src-tauri/notifierd/src/: main.rs
src-tauri/reminder-core/: Cargo.toml
src-tauri/reminder-core/src/: delivered_cache.rs  lib.rs
src-tauri/rencal-config/: Cargo.toml
src-tauri/rencal-config/src/: lib.rs
src-tauri/src/: caldir_access.rs  caldir_watcher.rs  config.rs  config_watcher.rs  event_cache.rs  external_themes.rs  google_oauth.rs  ics_open.rs  lib.rs  linux_reminders.rs  main.rs  menu.rs  migrations.rs  notifications.rs  omarchy.rs  single_instance.rs  storage.rs
src-tauri/src/migrations/: 0000_init.sql  0001_initialize_schema.sql  0001_update_active_to_is_visible.sql  0002_add_event_details.sql  0003_add_recurrence.sql  0004_add_recurring_event_id.sql  0005_add_original_start.sql  0006_drop_old_tables.sql
src-tauri/src/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
src-tauri/src/oauth/: mod.rs  server.rs  window.rs
src-tauri/src/routes/: caldir.rs  config.rs  mod.rs  oauth.rs  omarchy.rs  platform.rs  themes.rs
src-tauri/src/routes/caldir/: check_provider_connection.rs  connect_provider.rs  connect_provider_with_credentials.rs  create_event.rs  create_local_calendar.rs  delete_calendar.rs  delete_event.rs  delete_recurring_series.rs  discard.rs  get_config.rs  get_event.rs  get_provider_connect_info.rs  helpers.rs  import_ics.rs  list_calendars.rs  list_contacts.rs  list_events.rs  list_invites.rs  list_providers.rs  mod.rs  preview_ics.rs  rename_calendar.rs  rsvp.rs  search_events.rs  set_calendar_color.rs  set_config.rs  split_recurring_series_at.rs  sync.rs  sync_preview.rs  types.rs  update_event.rs
src-tauri/src/routes/providers/: mod.rs
src-tauri/src/routes/providers/google/: mod.rs
(+525 files in other folders)
