[package]
name = "rencal"
version = "0.1.0"
description = "Delightful Calendar app for Hyprland"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rencal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taurpc = "0.5.2"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
open = "5.0"
anyhow = "1.0.100"
socket2 = "0.5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
