[workspace]
members = ["reminder-core", "notifierd"]

[package]
name = "rencal"
version = "0.0.1"
description = "A calendar for hackers"
authors = ["you"]
edition = "2024"
default-run = "rencal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rencal_lib"
crate-type = ["rlib"]

[[example]]
name = "gen_types"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taurpc = "0.5.2"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
anyhow = "1.0.100"
socket2 = "0.5"
caldir-core = "0.9.0"
chrono = "0.4.43"
reminder-core = { path = "reminder-core" }
tauri-plugin-notification = "2"
tauri-plugin-dialog = { version = "2", default-features = false, features = ["xdg-portal"] }
chrono-tz = "0.10.4"
toml = "0.8"
notify = "6"
dirs = "5"
tauri-plugin-log = "2.8.0"
log = "0.4.29"
tauri-plugin-single-instance = "2.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
