[package]
name = "reminder-core"
version = "0.1.0"
edition = "2024"

[dependencies]
caldir-core = "0.10.1"
chrono = "0.4.43"
dirs = "5"
log = "0.4.29"
rencal-config = { path = "../rencal-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
